--- a/.github/workflows/test_caller_called_main.yaml
+++ b/.github/workflows/test_caller_called_main.yaml
@@ -14,6 +14,8 @@ jobs:
         runs-on: ubuntu-latest
         if: ${{  needs.Environment.outputs.ENVIRONMENT == 'prod' }}
         steps:
+          - name: "Checkout"
+            uses: actions/checkout@v3
           - name: "Use job1"
             uses: ./.github/workflow/job1.yaml
 
