--- a/.github/workflows/job2.yaml
+++ b/.github/workflows/job2.yaml
@@ -1,9 +1,13 @@
 on:  
   workflow_run:
+    workflows: [Determin Env]
+    types:
+      - completed
 
 jobs:
-  build-and-test:
+  on-failure:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     steps:
     - name: "Check code"
       uses: 'actions/checkout@v1'
