--- a/.github/workflows/job1.yaml
+++ b/.github/workflows/job1.yaml
@@ -5,8 +5,9 @@ on:
       - completed
 
 jobs:
-  build-and-test:
+  on-failure:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
     - name: "Check code"
       uses: 'actions/checkout@v1'
