--- a/.github/workflows/job1.yaml
+++ b/.github/workflows/job1.yaml
@@ -5,7 +5,7 @@ on:
       - completed
 
 jobs:
-  on-failure:
+  on-success:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
