--- a/.github/workflows/test_caller_called_main.yaml
+++ b/.github/workflows/test_caller_called_main.yaml
@@ -1,4 +1,4 @@
-#name: Determin Env
+name: Determin Env
 
 on :
     release:
@@ -13,7 +13,6 @@ jobs:
       - id: define_environment
         run: echo "ENVIRONMENT=$(echo $GITHUB_REF | cut -d'/' -f 3 | awk -F '-' '{print $1}')" >> $GITHUB_OUTPUT
     SetJob1:
-        name: Determin prd
         needs: [Environment]
         runs-on: ubuntu-latest
         if: ${{  needs.Environment.outputs.ENVIRONMENT == 'prod' }}
